--- a/administracao/templates/administracao/emails.html
+++ b/administracao/templates/administracao/emails.html
@@ -50,6 +50,11 @@
 
   </script>
 
+  <style>
+    .input-group-text {
+      margin-bottom: 4px;
+    }
+  </style>
 
 {% endblock %}
 
@@ -141,7 +146,7 @@
   <br>
 
   <strong>Por projeto</strong>
-  <label class="form-check-label">( <span style="font-size: 0.85em;">incluindo: </span></label>
+  <label class="form-check-label">(</label>
   <small>
     <div class="form-check form-check-inline mr-1">
       <input class="form-check-input" type="checkbox" id="estudantes" value="estudantes" checked>
