removendo problema com ecomercial em mensagens

--- a/documentos/templates/documentos/certificados_submetidos.html
+++ b/documentos/templates/documentos/certificados_submetidos.html
@@ -171,8 +171,7 @@
               Mentoria de Projeto
             {% endif %}
             {% with formatada=False %}
-            &amp;body=
-              {% include 'mensagem_certificados.html' %}
+            &amp;body={% include 'mensagem_certificados.html' %}
             ">
             {% endwith %}
             não formatado
