--- a/professores/templates/professores/objetivos_rubricas.html
+++ b/professores/templates/professores/objetivos_rubricas.html
@@ -6,127 +6,13 @@
 {% endcomment %}
 
 {% block head %}
+  
+  {% load static %}
+
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
 
-
-  <style>
-
-    body.en :lang(pt) {
-      display: none;
-    }
-    body.pt :lang(en){
-      display: none;
-    }
-
-    .df-switch {
-      text-align: right;
-      margin-right: 25px;
-    }
-    
-    .btn-toggle {
-      margin: 0 4rem;
-      padding: 0;
-      position: relative;
-      border: none;
-      height: 1.5rem;
-      width: 5rem;
-      border-radius: 1.5rem;
-      color: #109fff;
-      background: #0885da;
-    }
-
-    .btn-toggle:focus,
-    .btn-toggle.focus,
-    .btn-toggle:focus.active,
-    .btn-toggle.focus.active {
-      outline: none;
-    }
-    .btn-toggle:before,
-    .btn-toggle:after {
-      line-height: 1.5rem;
-      width: 4rem;
-      text-align: center;
-      font-weight: 600;
-      font-size: 0.75rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      position: absolute;
-      bottom: 0;
-      transition: opacity 0.25s;
-    }
-
-    .btn-toggle:before {
-      content: 'Português';
-      left: -7rem;
-      color: #72F480;
-    }
-
-    .btn-toggle:after {
-      content: 'English';
-      right: -5rem;
-      opacity: 0.5;
-      color: #109fff;
-    }
-
-    .btn-toggle > .inner-handle {
-      border-radius: 13px;
-      width: 65px;
-      height: 13px;
-      position: absolute;
-      top: 6px;
-      left: 8px;
-      background-color: #0f71bd;
-      box-shadow: inset 1px 1px 2px -1px black;
-    }
-    .btn-toggle.active > .inner-handle {
-      background-color: #BD4053;
-    }
-    .btn-toggle > .handle:before {
-      content: "";
-      position: absolute;
-      height: 34px;
-      width: 34px;
-      top: 35%;
-      left: 11px;
-      background-image: radial-gradient(circle at center, #0785da 5px, transparent 5px);
-      background-size: 10px 10px;
-      background-repeat: no-repeat;
-    }
-    .btn-toggle.active > .handle:before {
-      background-image: radial-gradient(circle at center, #F47280 5px, transparent 5px);
-    }
-    .btn-toggle > .handle {
-      position: absolute;
-      top: -0.2875rem;
-      left: 0.3875rem;
-      width: 2.125rem;
-      height: 2.125rem;
-      border-radius: 1.125rem;
-      background: #fff;
-      transition: left 0.25s;
-      border: 1px solid #ccc;
-    }
-    .btn-toggle.active {
-      transition: background-color 0.25s;
-    }
-    .btn-toggle.active > .handle {
-      left: 2.4175rem;
-      transition: left 0.25s;
-    }
-    .btn-toggle.active:before {
-      opacity: 0.5;
-    }
-    .btn-toggle.active:after {
-      opacity: 1;
-      color: #109fff;
-    }
-
-    .btn-toggle.active {
-      background-color: #109fff;
-    }
-
-  </style>
+  <link rel="stylesheet" href="{% static 'css/style_botao_lingua.css' %}">
 
 {% endblock %}
 
@@ -137,26 +23,8 @@
     <span lang="en">Learning Goals</span>
   </span>
   
-  
-  <div class="df-switch">
-    <button id="toggle-event" type="button" class="btn btn-lg btn-toggle" data-toggle="button" aria-pressed="false" autocomplete="off">
-        <div class="inner-handle"></div>
-        <div class="handle"></div>
-    </button>
-  </div>
-
-  <script>
-    $('#toggle-event').click(function () {
-      if($(this).hasClass('active')){
-        $('[lang="pt"]').show();
-        $('[lang="en"]').hide();
-      } else {
-        $('[lang="pt"]').hide();
-        $('[lang="en"]').show();
-        $(":lang(en)").show();
-      }
-    });
-  </script>
+  {% comment %} Botão para seletor de lingua (não esqueça do CSS) {% endcomment %}
+  {% include "botao_lingua.html" %}
 
   {% for objetivo in objetivos %}
     <div class="border rounded" style="padding: 15px; margin-top: 20px;">
