--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 -->
 <!DOCTYPE html>
 <html lang="pt-br">
+<meta charset="UTF-8">
+<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 <head>
   {% block title %}<title>Projeto Final de Engenharia</title>{% endblock %}
   {% load static %}
