--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -143,14 +143,18 @@
     <hr>
 
     {% comment %} Avaliação de Pares {% endcomment %}
-    {% comment %} <a {% if not projeto and user.tipo_de_usuario == 1 %} class="disabled" onclick="showMessage('projeto')" {% else %} href="{% url 'avaliacao_pares' 'intermediaria' %}" {% endif %} >
+    <a {% if fora_fase_feedback_intermediario %} class="disabled" onclick="showMessage('feedback')" {% else %}
+        {% if not projeto and user.tipo_de_usuario == 1%} class="disabled" onclick="showMessage('projeto')" {% else %}
+        href="{% url 'avaliacao_pares' 'intermediaria' %}" {% endif %}{% endif %} >
         <h5>Avaliação de Pares Intermediária</h5>
     </a>
-    <a {% if not projeto and user.tipo_de_usuario == 1 %} class="disabled" onclick="showMessage('projeto')" {% else %} href="{% url 'avaliacao_pares' 'final' %}" {% endif %} >
+    <a {% if fora_fase_feedback_final %} class="disabled" onclick="showMessage('feedback')" {% else %}
+        {% if not projeto and user.tipo_de_usuario == 1%} class="disabled" onclick="showMessage('projeto')" {% else %}
+        href="{% url 'avaliacao_pares' 'final' %}" {% endif %}{% endif %} >
         <h5>Avaliação de Pares Final</h5>
     </a>
 
-    <hr> {% endcomment %}
+    <hr>
 
     <a {% if not fase_final %} class="disabled" onclick="showMessage('final')" {% else %} href="{% url 'estudante_feedback' %}" {% endif %} >
         <h5>Enviar feedback final de projeto</h5>
@@ -163,6 +167,7 @@
     <div class="mensagem" id="vencido">Prazo para a seleção dos projetos vencido.</div>
     <div class="mensagem" id="liberado">Propostas ainda não liberadas.</div>
     <div class="mensagem" id="final">Você ainda não está na fase final de projeto.</div>
+    <div class="mensagem" id="feedback">Fora do período para o feedback.</div>
     <div class="mensagem" id="projeto_professor">Professor, para ver seus projetos clique no seu nome na barra de título.</div>
     
     {% comment %} tipo_de_usuario == 2 é professor e tipo_de_usuario == 4 é administrador {% endcomment %}
