--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -10,6 +10,7 @@
     <a href="{% url 'avisos_listar' %}"><h5>Agenda do PFE</h5></a>
     <a href="{% url 'emails' %}"><h5>Listas de e-mails</h5></a>
     <a href="{% url 'relatos_quinzenais_todos' %}"><h5>Relatos Quinzenais</h5></a>
+    <a href="{% url 'avaliacoes_pares_todas' %}"><h5>Avaliações de Pares</h5></a>
 
     <hr>
     <h5>Agendamentos</h5>
