--- a/estudantes/templates/estudantes/avaliacao_pares.html
+++ b/estudantes/templates/estudantes/avaliacao_pares.html
@@ -43,19 +43,19 @@
       <label for="aprecia">
         O que você aprecia n{% if colega.aluno.user.genero == "F" %}a{% else %}o{% endif %} {{colega.aluno}}?
       </label><br>
-      <textarea id="aprecia{{colega.id}}" name="aprecia{{colega.id}}" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if par.aprecia %}{{par.aprecia}}{% endif %}</textarea>
+      <textarea id="aprecia{{colega.id}}" name="aprecia{{colega.id}}" rows="4" cols="80" maxlength="1000" required {% if vencido %}disabled{% endif %}>{% if par.aprecia %}{{par.aprecia}}{% endif %}</textarea>
       <br><br>
 
       <label for="atrapalhando">
         O que você vê {% if colega.aluno.user.genero == "F" %}a{% else %}o{% endif %} {{colega.aluno}} fazendo, ou deixando de fazer, que está atrapalhando?
       </label><br>
-      <textarea id="atrapalhando{{colega.id}}" name="atrapalhando{{colega.id}}" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if par.atrapalhando %}{{par.atrapalhando}}{% endif %}</textarea>
+      <textarea id="atrapalhando{{colega.id}}" name="atrapalhando{{colega.id}}" rows="4" cols="80" maxlength="1000" required {% if vencido %}disabled{% endif %}>{% if par.atrapalhando %}{{par.atrapalhando}}{% endif %}</textarea>
       <br><br>
 
       <label for="mudar">
         O que {% if colega.aluno.user.genero == "F" %}a{% else %}o{% endif %} {{colega.aluno}} pode mudar, que faria diferença para você?
       </label><br>
-      <textarea id="mudar{{colega.id}}" name="mudar{{colega.id}}" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if par.mudar %}{{par.mudar}}{% endif %}</textarea>
+      <textarea id="mudar{{colega.id}}" name="mudar{{colega.id}}" rows="4" cols="80" maxlength="1000" required {% if vencido %}disabled{% endif %}>{% if par.mudar %}{{par.mudar}}{% endif %}</textarea>
 
 
       <br><br>
