--- a/projetos/templates/index.html
+++ b/projetos/templates/index.html
@@ -28,6 +28,8 @@
     {% endif %}
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         <a href="{% url 'index_professor' %}"><h5>Área dos Professores</h5></a>
+        <hr>
+        <a href="{% url 'index_academica' %}"><h5>Área Acadêmica</h5></a>
         <a href="{% url 'index_operacional' %}"><h5>Área Operacional</h5></a>
         <a href="{% url 'index_administracao' %}"><h5>Área Administrativa</h5></a>
     {% endif %}
