--- a/templates/organizacao.html
+++ b/templates/organizacao.html
@@ -48,8 +48,8 @@
         <a
           data-proposta='{{proposta.id}}'
           class="link-organizacao"
-          href="{% url 'link_organizacao' proposta.id %}"
-          data-url="{% url 'link_organizacao' proposta.id %}"
+          href="{% url 'link_organizacao' proposta.id proposta.nome_organizacao %}"
+          data-url="{% url 'link_organizacao' proposta.id proposta.nome_organizacao %}"
           ><small>&#128279;</small></a
         >
       </span>
