--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -157,7 +157,7 @@
     <hr>
 
     <a {% if not fase_final %} class="disabled" onclick="showMessage('final')" {% else %} href="{% url 'estudante_feedback' %}" {% endif %} >
-        <h5>Enviar feedback sobre o PFE <br><small>(avaliação de curso/professores)</small></h5>
+        <h5>Feedback de encerramento do PFE</h5>
     </a>
 
 
