--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -15,6 +15,7 @@
     <hr>
     <a href="{% url 'cadastrar_organizacao' %}"><h5>Cadastrar Organização</h5></a>
     <a href="{% url 'cadastrar_usuario' %}"><h5>Cadastrar Usuário</h5></a>
+    <a href="{% url 'cadastrar_disciplina' %}"><h5>Cadastrar Disciplina</h5></a>
 
     <hr>
     <a href="{% url 'contas_senhas' %}"><h5>Envia Contas e Senhas</h5></a>
