--- a/administracao/templates/administracao/cadastra_disciplina.html
+++ b/administracao/templates/administracao/cadastra_disciplina.html
@@ -22,7 +22,7 @@
   <form method="post" id="disciplinaform" enctype="multipart/form-data"> {% csrf_token %}
   
 
-    <label for="nome">Nome da Disciplina:</label> <input type="text" size="48" maxlength="{{disciplina_length|add:-2}}" id="nome" name="nome" required>
+    <label for="nome">Nome da Disciplina:</label> <input type="text" size="48" style="max-width:100%;display:block" maxlength="{{disciplina_length|add:-2}}" id="nome" name="nome" required>
     <br><br>
     <input type="submit" value="Cadastrar Disciplina">
     
