melhor texto para banca

--- a/professores/templates/professores/informes_bancas.html
+++ b/professores/templates/professores/informes_bancas.html
@@ -82,7 +82,7 @@
 
     </form>
   {% else %}
-    <p>Erro ao recuperar bancas.</p>
+    <p>Nenhum banca identificada.</p>
   {% endif %}
 
 {% endblock %}
