--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -23,7 +23,7 @@
 {% block content %}
   
   <span class="titulo">{{titulo}}
-    <a href="{% url 'cadastrar_usuario' %}?tipo=estudante">&#10133;</a>
+    <small><a href="{% url 'cadastrar_usuario' %}?tipo=estudante">&#10133;</a></small>
   </span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
