portando exibição para mentorias

--- a/professores/templates/professores/dinamicas_editar.html
+++ b/professores/templates/professores/dinamicas_editar.html
@@ -183,7 +183,7 @@
       <br><br>
 
       <div class="container">
-        <button type="submit">{% if encontro %}Editar{% else %}Criar{% endif %}</button>
+        <button type="submit">{% if encontro %}Atualizar{% else %}Criar{% endif %}</button>
       </div>
     </form>
   
