--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -61,7 +61,7 @@
                 let orientador = info.event.extendedProps.orientador.split(" ");
                 nome_orientador = orientador[0] + ' ' + orientador[orientador.length - 1];  
               }
-              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#D8D8D8'>" + nome_orientador + "</nobr>";
+              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#566573'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
             }
           }
         },
@@ -82,13 +82,10 @@
 
                 organizacao: "{{banca.projeto.organizacao.sigla}}",
                 orientador: "{{banca.projeto.orientador}}",
-
+                local: "{{banca.location}}",
                 start: '{{banca.startDate.year}}-{{banca.startDate.month|stringformat:"02d"}}-{{banca.startDate.day|stringformat:"02d"}}T{{banca.startDate.hour|stringformat:"02d"}}:{{banca.startDate.minute|stringformat:"02d"}}:00',
-
                 end: '{{banca.endDate.year}}-{{banca.endDate.month|stringformat:"02d"}}-{{banca.endDate.day|stringformat:"02d"}}T{{banca.endDate.hour|stringformat:"02d"}}:{{banca.endDate.minute|stringformat:"02d"}}:00',
-
                 url: '../bancas_editar/{{banca.id}}',
-
                 textColor: '#fafafa',
 
                 {% if banca.tipo_de_banca == 0 %} {% comment %} Banca Final {% endcomment %}
