--- a/propostas/templates/propostas/mapeamento_estudante_projeto.html
+++ b/propostas/templates/propostas/mapeamento_estudante_projeto.html
@@ -98,6 +98,7 @@
 
   <div class="atualizar">
     
+    <div class="table-responsive">
     <div id="tabela">
 
       {% if propostas %}
@@ -203,6 +204,7 @@
 
     </div>
 
+  </div>
   </div>
 
   <small style="font-size:12px"><b>C</b>: Computação | <b>X</b>: Mecatrônica | <b>M</b>: Mecânica</small>
